--- a/Des-17/kristian/Project.toml
+++ b/Des-17/kristian/Project.toml
@@ -1,3 +1,4 @@
 [deps]
 AStarSearch = "e6cbe913-2b79-4cc5-848a-e3bbf8537828"
 Memoization = "6fafb56a-5788-4b4e-91ca-c0cea6611c73"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
