--- a/Des-24/kristian/Project.toml
+++ b/Des-24/kristian/Project.toml
@@ -1,4 +1,5 @@
 [deps]
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
-NonlinearSolve = "8913a72c-1f9b-4ce2-8d82-65094dcecaec"
-Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+Primes = "27ebfcd6-29c5-5fa9-bf4b-fb8fc14df3ae"
+SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
